# SecondEngineProject

./: .gitignore  CMakeLists.txt  README.md  SecondEngineProject.sln  SecondEngineProject.vcxproj  SecondEngineProject.vcxproj.filters
FlappyTest/: CMakeLists.txt
FlappyTest/Data/Shaders/: BasicProjectionVertexShader.glsl
FlappyTest/EngineBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  EngineTests.vcxproj  EngineTests.vcxproj.filters  EngineTests[1]_include.cmake  EngineTests[1]_tests.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  SecondEngineProject.sln  SecondEngineProject.vcxproj  SecondEngineProject.vcxproj.filters  cmake_install.cmake
FlappyTest/EngineBuild/Plugins/EASTL/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  EASTL.sln  EASTL.vcxproj  EASTL.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
FlappyTest/EngineBuild/Plugins/glad/: INSTALL.vcxproj  INSTALL.vcxproj.filters  glad.vcxproj  glad.vcxproj.filters
FlappyTest/EngineBuild/Plugins/glfw-3.3.4/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  GLFW.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  uninstall.vcxproj  uninstall.vcxproj.filters
FlappyTest/EngineBuild/Plugins/glfw-3.3.4/examples/: INSTALL.vcxproj  INSTALL.vcxproj.filters  boing.vcxproj  boing.vcxproj.filters  gears.vcxproj  gears.vcxproj.filters  heightmap.vcxproj  heightmap.vcxproj.filters  offscreen.vcxproj  offscreen.vcxproj.filters  particles.vcxproj  particles.vcxproj.filters  sharing.vcxproj  sharing.vcxproj.filters  simple.vcxproj  simple.vcxproj.filters  splitview.vcxproj  splitview.vcxproj.filters  wave.vcxproj  wave.vcxproj.filters
FlappyTest/EngineBuild/Plugins/glfw-3.3.4/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters  glfw3.pc
FlappyTest/EngineBuild/Plugins/glfw-3.3.4/tests/: INSTALL.vcxproj  INSTALL.vcxproj.filters  clipboard.vcxproj  clipboard.vcxproj.filters  cursor.vcxproj  cursor.vcxproj.filters  empty.vcxproj  empty.vcxproj.filters  events.vcxproj  events.vcxproj.filters  gamma.vcxproj  gamma.vcxproj.filters  glfwinfo.vcxproj  glfwinfo.vcxproj.filters  icon.vcxproj  icon.vcxproj.filters  iconify.vcxproj  iconify.vcxproj.filters  inputlag.vcxproj  inputlag.vcxproj.filters  joysticks.vcxproj  joysticks.vcxproj.filters  monitors.vcxproj  monitors.vcxproj.filters  msaa.vcxproj  msaa.vcxproj.filters  opacity.vcxproj  opacity.vcxproj.filters  reopen.vcxproj  reopen.vcxproj.filters  tearing.vcxproj  tearing.vcxproj.filters  threads.vcxproj  threads.vcxproj.filters  timeout.vcxproj  timeout.vcxproj.filters  title.vcxproj  title.vcxproj.filters  triangle-vulkan.vcxproj  triangle-vulkan.vcxproj.filters  (+2 more)
FlappyTest/EngineBuild/Plugins/googletest-main/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  googletest-distribution.sln
FlappyTest/EngineBuild/Plugins/googletest-main/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
FlappyTest/Source/EntryPoint/: EntryPoint.cpp
FlappyTest/Source/GameMode/: FlappyGameMode.cpp  FlappyGameMode.h
FlappyTest/Source/Objects/: CeilingAndFloor.cpp  CeilingAndFloor.h  Pillar.cpp  Pillar.h
Plugins/DirectXTex/: CMakeLists.txt
TestProjects/3DTest/: CMakeLists.txt  RDCaptureSettings.cap
TestProjects/3DTest/Data/Models/BoatEngine/: license.txt  scene.gltf
TestProjects/3DTest/Data/Models/Floor/: license.txt  scene.gltf
TestProjects/3DTest/Data/Models/Helmet/: license.txt  scene.gltf
TestProjects/3DTest/Data/Models/Sphere/: Sphere.rar  scene.gltf
TestProjects/3DTest/Data/Models/high_poly_blender_monkey_suzanne/: license.txt  scene.gltf
TestProjects/3DTest/Data/Shaders/: BasicDepthFragmentShader.glsl  BasicDepthVertexShader.glsl  BasicTexFragmentShader.glsl  DepthFragmentShader.glsl  HLSLtoGLSL.py  LightSourceFragmentShader.glsl  LightingTexFragmentShader.glsl  OutlineFragmentShader.glsl  QuadTexFragmentShader.glsl  QuadTexVertexShader.glsl  RunHLSLtoGLSL.bat  SkyboxFragmentShader.glsl  SkyboxVertexShader.glsl  WithNormalProjectionVertexShader.glsl
TestProjects/3DTest/Data/Shaders/D3D11/: 8BallTest_PS.hlsl  BasicTex_PS.hlsl  FlatColor_PS.hlsl  ModelWorldPosition_VS_Pos-Normal-UV-LightPos-ScreenToWorld.hlsl  UnchangedPosition_VS.hlsl
TestProjects/3DTest/Data/Shaders/D3D12/: shaders.hlsl
TestProjects/3DTest/Data/Shaders/Old/: BasicDepthFragmentShader.glsl  BasicDepthVertexShader.glsl  BasicPerspVertexShader.glsl  BasicProjectionVertexShader.glsl  BasicTexFragmentShader.glsl  QuadTexFragmentShader.glsl  QuadTexVertexShader.glsl  SkyboxFragmentShader.glsl  SkyboxVertexShader.glsl  VisualizeDepthFragmentShader.glsl  WithNormalProjectionVertexShader.glsl
TestProjects/3DTest/Data/Shaders/OpenGL/: 8BallTest_PS.glsl  BasicTex_PS.glsl  BasicTex_PS_WithShadow.glsl  Depth_VS-Pos-Normal-UV.glsl  Empty_PS.glsl  FlatColor_PS.glsl  GS_DebugLines.glsl  GS_Depth_Cascaded.glsl  GS_VisualizeNormals.glsl  GeometryTest_GS.glsl  LightSource_PS.glsl  ModelWorldPosition_VS.glsl  ModelWorldPosition_VS_Pos-Normal-UV_Instanced.glsl  ModelWorldPosition_VS_Pos-UV-Normal_ManuallyWritten-Instanced.glsl  ModelWorldPosition_VS_Pos-UV-Normal_ManuallyWritten-WithInterface.glsl  ModelWorldPosition_VS_Pos-UV-Normal_ManuallyWritten.glsl  ModelWorldPosition_VS_Pos-UV.glsl  PS_ParallaxTest.glsl  (+14 more)
TestProjects/3DTest/EngineBuild/: ALL_BUILD.vcxproj  CTestTestfile.cmake  EngineTests.vcxproj  EngineTests.vcxproj.filters  EngineTests[1]_include.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  SecondEngineProject.sln  SecondEngineProject.vcxproj  SecondEngineProject.vcxproj.filters  cmake_install.cmake
TestProjects/3DTest/Source/GameMode/: TestGameMode.cpp  TestGameMode.h
Utils/cmake tutorials/Custom with GLFW/: CMakeLists.txt
Utils/cmake tutorials/Step1/: CMakeLists.txt  ConfigTutorial.h.in  tutorial.cxx
(+919 files in other folders)
